--- a/src/main/properties/prod/environment.properties
+++ b/src/main/properties/prod/environment.properties
@@ -1,9 +1,9 @@
-database.url=jdbc:h2:mem:h2test;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
-database.username=sa
-database.password=
+database.url=jdbc:postgresql://localhost/myapp
+database.username=myapp
+database.password=myapp
 
 # Useful values:
 #  create: drop all data and recreate the schema
 #  update: add missing tables and columns
 #  validate: check that the required tables and columns are present
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
