--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <!-- There is no consistency between the findbugs' plugin version and the version of findbugs it uses -->
     <version.findbugs>2.0.3</version.findbugs>
     <version.findbugs-plugin>2.5.3</version.findbugs-plugin>
-    <version.flyway>2.3.1</version.flyway>
+    <version.flyway>3.0</version.flyway>
     <version.hibernate>4.3.3.Final</version.hibernate>
     <version.httpcomponents>4.3.3</version.httpcomponents>
     <version.jackson1>1.9.13</version.jackson1>
@@ -89,7 +89,7 @@
       <version>5.1.0.Final</version>
     </dependency>
     <dependency>
-      <groupId>com.googlecode.flyway</groupId>
+      <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>${version.flyway}</version>
     </dependency>
