--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,19 @@
           </compilerArguments-->
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.16</version>
+            <configuration>
+                <useFile>false</useFile>
+                <argLine>-Xmx1024M -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true</argLine>
+                <systemPropertyVariables>
+                    <datasource.url>${oracle.datasource.url}</datasource.url>
+                </systemPropertyVariables>
+                <runOrder>random</runOrder>
+            </configuration>
+        </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>appassembler-maven-plugin</artifactId>
