--- a/pom.xml
+++ b/pom.xml
@@ -145,14 +145,14 @@
   <build>
     <resources>
       <resource>
-        <directory>gateway-app/src/main/resources</directory>
+        <directory>src/main/resources</directory>
         <filtering>true</filtering>
         <includes>
           <include>build.properties</include>
         </includes>
       </resource>
       <resource>
-        <directory>gateway-app/src/main/resources</directory>
+        <directory>src/main/resources</directory>
         <filtering>false</filtering>
         <excludes>
           <exclude>build.properties</exclude>
