--- a/gateway-app/bower.json
+++ b/gateway-app/bower.json
@@ -15,6 +15,7 @@
     "angular-route": "1.2.16",
     "bootstrap": "~3.1.1",
     "requirejs": "~2.1.11",
-    "requirejs-domready": "~2.0.1"
+    "requirejs-domready": "~2.0.1",
+    "angular-ui-date": "~0.0.3"
   }
 }
