--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>eu.nets.oss.maven</groupId>
-    <artifactId>nets-oss-parent</artifactId>
-    <version>1</version>
+    <groupId>eu.nets.maven</groupId>
+    <artifactId>nets-parent</artifactId>
+    <version>4</version>
   </parent>
 
   <groupId>eu.nets.factory</groupId>
@@ -18,7 +17,8 @@
 
   <properties>
     <version.bonecp>0.8.0.RELEASE</version.bonecp>
-    <!-- There is no consistency between the findbugs' plugin version and the version of findbugs it uses -->
+    <!-- There is no consistency between the findbugs' plugin version and the
+      version of findbugs it uses -->
     <version.findbugs>2.0.3</version.findbugs>
     <version.findbugs-plugin>2.5.3</version.findbugs-plugin>
     <version.flyway>3.0</version.flyway>
@@ -47,11 +47,11 @@
 
   <dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>17.0</version>
-        </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>17.0</version>
+      </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
@@ -205,24 +205,22 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-          <!--compilerArguments>
-            <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
-          </compilerArguments-->
+          <encoding>utf-8</encoding>
         </configuration>
       </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.16</version>
-            <configuration>
-                <useFile>false</useFile>
-                <argLine>-Xmx1024M -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true</argLine>
-                <systemPropertyVariables>
-                    <datasource.url>${oracle.datasource.url}</datasource.url>
-                </systemPropertyVariables>
-                <runOrder>random</runOrder>
-            </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.16</version>
+        <configuration>
+          <useFile>false</useFile>
+          <argLine>-Xmx1024M -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true</argLine>
+          <systemPropertyVariables>
+            <datasource.url>${oracle.datasource.url}</datasource.url>
+          </systemPropertyVariables>
+          <runOrder>random</runOrder>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
         <configuration>
