--- a/gateway-app/pom.xml
+++ b/gateway-app/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${version.spring-data}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${version.spring}</version>
+        </dependency>
 
 		<!-- Database -->
 		<dependency>
