o Making the zip file have the properties files in the right place. o Renaming MyAppMain to GatewayMain and updating the appassembler configuration so it all works.

--- a/gateway-app/pom.xml
+++ b/gateway-app/pom.xml
@@ -193,7 +193,7 @@
 				<configuration>
 					<programs>
 						<program>
-							<mainClass>eu.nets.factory.gateway.app.MyMain</mainClass>
+							<mainClass>eu.nets.factory.gateway.app.GatewayMain</mainClass>
 							<name>startapp</name>
 						</program>
 					</programs>
