--- a/gateway-requirements-test/pom.xml
+++ b/gateway-requirements-test/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>eu.nets.payment</groupId>
       <artifactId>payment-fitnesse-core</artifactId>
-      <version>1.3-SNAPSHOT</version>
+      <version>1.2</version>
     </dependency>
 
     <dependency>
