--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,16 @@
         <artifactId>javassist</artifactId>
         <version>3.18.1-GA</version>
       </dependency>
+      <dependency>
+        <groupId>org.jboss.logging</groupId>
+        <artifactId>jboss-logging</artifactId>
+        <version>3.1.0.GA</version>
+      </dependency>
+      <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
