--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -38,6 +37,7 @@
   <scm>
     <connection>scm:git:git@gitorious.bbsas.no:factory/gateway.git</connection>
     <developerConnection>scm:git:git@gitorious.bbsas.no:factory/gateway.git</developerConnection>
+    <tag>gateway-1.0</tag>
   </scm>
 
   <modules>
@@ -204,7 +204,7 @@
                 <exclude>commons-logging</exclude>
               </excludes>
             </bannedDependencies>
-            <dependencyConvergence/>
+            <dependencyConvergence />
           </rules>
           <fail>true</fail>
         </configuration>
@@ -235,6 +235,12 @@
         <artifactId>maven-resources-plugin</artifactId>
         <configuration>
           <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
     </plugins>
