--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>eu.nets.factory</groupId>
   <artifactId>gateway</artifactId>
-  <version>1.0</version>
+  <version>develop-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -37,7 +37,6 @@
   <scm>
     <connection>scm:git:git@gitorious.bbsas.no:factory/gateway.git</connection>
     <developerConnection>scm:git:git@gitorious.bbsas.no:factory/gateway.git</developerConnection>
-    <tag>gateway-1.0</tag>
   </scm>
 
   <modules>
