Running migrations in all environments unless we're using H2

--- a/gateway-app/src/main/zip/properties/st/environment.properties
+++ b/gateway-app/src/main/zip/properties/st/environment.properties
@@ -1,7 +1,7 @@
 port=9002
 environment=st
-database.url=jdbc:oracle:thin:@//vm-stdb-95:1521/s3efak
-database.username=portal_app
-database.password=portal_app
+database.url=jdbc:oracle:thin:@//vm-stdb-17:1521/s13st
+database.username=nordeabm
+database.password=nordeabm
 
 hibernate.hbm2ddl.auto=validate
