--- a/gateway-app/src/main/zip/properties/st/environment.properties
+++ b/gateway-app/src/main/zip/properties/st/environment.properties
@@ -1,7 +1,7 @@
 port=9002
 environment=st
 database.url=jdbc:oracle:thin:@//vm-stdb-17:1521/s13st
-database.username=nordeabm
-database.password=nordeabm
+database.username=gateway
+database.password=gateway
 
 hibernate.hbm2ddl.auto=validate
