o Some stuff to try to get haproxy to work on Windows.

--- a/gateway-app/src/main/zip/properties/st/environment.properties
+++ b/gateway-app/src/main/zip/properties/st/environment.properties
@@ -4,4 +4,6 @@ database.url=jdbc:oracle:thin:@//vm-stdb-17:1521/s13st
 database.username=gateway
 database.password=gateway
 
+haproxy.bin.linux=/opt/factory/bin/haproxy
+
 hibernate.hbm2ddl.auto=validate
