--- a/gateway-app/environment.properties
+++ b/gateway-app/environment.properties
@@ -3,4 +3,7 @@ database.url=jdbc:oracle:thin:@//vm-stdb-95:1521/s3efak
 database.username=tlaug
 database.password=tlaug
 
+haproxy.bin.windows=c:/cygwin64/usr/local/sbin/haproxy
+haproxy.bin.linux=/usr/bin/haproxy
+
 hibernate.hbm2ddl.auto=validate
