Email stuff. Not implemented to send yet

--- a/gateway-app/environment.properties
+++ b/gateway-app/environment.properties
@@ -7,3 +7,6 @@ haproxy.bin.windows=c:/cygwin64/usr/local/sbin/haproxy
 haproxy.bin.linux=/usr/bin/haproxy
 
 hibernate.hbm2ddl.auto=validate
+
+email.host=smtp
+email.port=25
