--- a/gateway-app/src/main/zip/properties/st/environment.properties
+++ b/gateway-app/src/main/zip/properties/st/environment.properties
@@ -7,3 +7,6 @@ database.password=gateway
 haproxy.bin.linux=/opt/factory/bin/haproxy
 
 hibernate.hbm2ddl.auto=validate
+
+email.host=localhost
+email.port=25
