--- a/gateway-app/pom.xml
+++ b/gateway-app/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-test</artifactId>
             <version>${version.spring}</version>
         </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>${version.spring}</version>
+    </dependency>
 
 		<!-- Database -->
 		<dependency>
@@ -173,6 +178,11 @@
       <groupId>org.glassfish</groupId>
       <artifactId>javax.el</artifactId>
       <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>${version.javax-mail}</version>
     </dependency>
   </dependencies>
 
