--- a/gateway-app/pom.xml
+++ b/gateway-app/pom.xml
@@ -138,6 +138,11 @@
 			<artifactId>commons-collections</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+    <dependency>
+      <groupId>net.schmizz</groupId>
+      <artifactId>sshj</artifactId>
+      <version>0.10.0</version>
+    </dependency>
 
 		<dependency>
 			<groupId>org.reflections</groupId>
