Start HAProxy works on remote machine!
- A script to (re)start HAProxy gets pushed to HAProxy machine and executes from Grandiosa with SSH
- Added exception handling
- Removed Files.exists check, since it will only work if haproxy is on the same machine

--- a/gateway-app/environment.properties
+++ b/gateway-app/environment.properties
@@ -3,8 +3,10 @@ database.url=jdbc:oracle:thin:@//vm-stdb-95:1521/s3efak
 database.username=tlaug
 database.password=tlaug
 
-haproxy.bin.windows=c:/cygwin64/usr/local/sbin/haproxy
+#haproxy.bin.windows=c:/cygwin64/usr/local/sbin/haproxy
+haproxy.bin.windows=haproxy
 haproxy.bin.linux=/usr/bin/haproxy
+haproxy.timeout=10
 
 hibernate.hbm2ddl.auto=validate
 
