--- a/gateway-app/src/main/zip/properties/st/environment.properties
+++ b/gateway-app/src/main/zip/properties/st/environment.properties
@@ -4,7 +4,8 @@ database.url=jdbc:oracle:thin:@//vm-stdb-17:1521/s13st
 database.username=gateway
 database.password=gateway
 
-haproxy.bin.linux=/opt/factory/bin/haproxy
+haproxy.bin.linux=haproxy
+haproxy.timeout=10
 
 hibernate.hbm2ddl.auto=validate
 
