Switched to H2 database
- Merged all db-scripts into one file
+ Removed Person

--- a/gateway-app/environment.properties
+++ b/gateway-app/environment.properties
@@ -1,7 +1,9 @@
 environment=local
-database.url=jdbc:oracle:thin:@//vm-stdb-95:1521/s3efak
-database.username=tlaug
-database.password=tlaug
+
+#database.url=jdbc:oracle:thin:@vm-udb-7:1521:u7utv
+database.url=jdbc:h2:file:data/grandiosa
+database.username=sa
+database.password=
 
 #haproxy.bin.windows=c:/cygwin64/usr/local/sbin/haproxy
 haproxy.bin.windows=haproxy
