--- a/gateway-app/src/main/zip/properties/nb-customertest/environment.properties
+++ b/gateway-app/src/main/zip/properties/nb-customertest/environment.properties
@@ -1,8 +1,5 @@
 port=9002
-environment=st
-#database.url=jdbc:oracle:thin:@//vm-stdb-17:1521/s13st
-#database.username=gateway
-#database.password=gateway
+environment=nb-customertest
 database.url=jdbc:h2:file:data/grandiosa
 database.username=sa
 database.password=
