Changed valid application-group port range

--- a/gateway-app/src/main/zip/properties/customertest/environment.properties
+++ b/gateway-app/src/main/zip/properties/customertest/environment.properties
@@ -1,13 +1,13 @@
-port=9002
-environment=nb-customertest
+port=9000
+environment=customertest
 database.url=jdbc:h2:file:data/grandiosa
 database.username=sa
 database.password=
 
-haproxy.bin.linux=haproxy
+haproxy.bin.linux=/opt/nettbank/haproxy/curr/haproxy
 haproxy.timeout=10
 
 hibernate.hbm2ddl.auto=validate
 
-email.host=localhost
+email.host=172.22.110.34
 email.port=25
