E-mail - Gets mail host, port and from-address from environment.properties.
( Default values added in MailConfig to ensure that the tests (which doesn't have a properties file) doesn't break )

--- a/gateway-app/environment.properties
+++ b/gateway-app/environment.properties
@@ -12,5 +12,6 @@ haproxy.timeout=10
 
 hibernate.hbm2ddl.auto=validate
 
-email.host=smtp
+email.host=localhost
 email.port=25
+email.address.from=haproxy@nets.eu
